--- a/book.toml
+++ b/book.toml
@@ -1,15 +1,6 @@
 [book]
-title="You don't know ServiceNow APIs"
-authors = ["Vishal Ingle"]
+authors = ["beingfluid"]
 language = "en"
 multilingual = false
 src = "src"
-
-[output.html.playground]
-editable = true
-
-[output.html]
-mathjax-support = true
-
-[output.html.code.hidelines]
-javascript = "//"
+title = "You don't know ServiceNow API"
